# RedNotebookAI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES_v0.7.17.md  RELEASE_NOTES_v0.7.18.md  RELEASE_NOTES_v0.7.19.md  RELEASE_NOTES_v0.7.21.md  RELEASE_NOTES_v0.7.22.md  RELEASE_NOTES_v0.7.23.md  RELEASE_NOTES_v0.7.24.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
demo/: q3-weekly-orders-by-region.json  record_demo.py
docs/: ai.md  architecture.md  connectors.md  contributing.md  deployment.md  notebooklm_integration.md  roadmap.md  security.md  visualization.md
docs/deployment/: try-on-huggingface.md  try-rednotebook.md
docs/design/: cross-source-joins.md  reactive-notebooks.md  remote-git-sync.md
examples/: infographic_example.md  sample_notebook.json  sample_query_result.csv  trino_connection_example.md
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/settings/admin/: layout.tsx  page.tsx
frontend/app/settings/admin/ai/: page.tsx
frontend/app/settings/admin/audit/: page.tsx
frontend/app/settings/admin/users/: page.tsx
frontend/app/settings/tokens/: page.tsx
frontend/components/: brand-mark.tsx  command-palette.tsx  demo-banner.tsx  markdown.tsx  onboarding-tour.tsx  providers.tsx  resizable-sidebar.tsx  theme-toggle.tsx
frontend/components/notebook/: ai-prompt-cell.tsx  chart-builder.tsx  chart-view.tsx  markdown-cell.tsx  notebook-canvas.tsx  notebook-knowledge.tsx  notebook-tabs.tsx  profile-view.tsx  result-table.tsx  result-tabs.tsx  sql-cell.tsx  visualization-cell.tsx
frontend/components/panels/: ai-panel.tsx  infographic-modal.tsx  knowledge-chat.tsx  knowledge-drawer.tsx  knowledge-panel.tsx  knowledge-studio.tsx  right-sidebar.tsx
frontend/components/sidebar/: connection-dialog.tsx  connection-picker.tsx  connection-templates.tsx  files-section.tsx  left-sidebar.tsx  metadata-explorer.tsx  notebooks-list.tsx
frontend/components/topbar/: notebook-history-dialog.tsx  publish-dialog.tsx  settings-dialog.tsx  topbar.tsx  user-menu.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  kbd.tsx  popover.tsx  scroll-area.tsx  select.tsx  sheet.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
frontend/hooks/: use-auth.ts  use-autosave.ts  use-connection-migration.ts  use-notebook-knowledge.ts
frontend/lib/: ai-context.ts  api.ts  chart-export.ts  chart-recommender.ts  connection.ts  connectors.ts  result-stats.ts  types.ts  utils.ts
frontend/scripts/: capture-connection-dialog.mjs  capture-screenshots.mjs
frontend/store/: connection-store.ts  knowledge-store.ts  notebook-store.ts  ui-store.ts
packaging/: icon.icns  rednotebook.spec
rednotebook/: __init__.py  desktop.py
rednotebook/admin/: __init__.py  runtime_config.py
rednotebook/ai/: __init__.py  anthropic_provider.py  base.py  bundled_provider.py  context_builder.py  cursor_provider.py  errors.py  mock.py  ollama_provider.py  openai_provider.py  prompts.py  registry.py
rednotebook/audit/: __init__.py  log.py
rednotebook/auth/: __init__.py  encryption.py  models.py  passwords.py  sessions.py  store.py  tokens.py
rednotebook/cache/: __init__.py  local_cache.py
rednotebook/cli/: main.py
rednotebook/config/: __init__.py  settings.py
rednotebook/connectors/: __init__.py  base.py  duckdb.py  registry.py  sqlalchemy_dialects.py  store.py  trino.py
rednotebook/knowledge/: __init__.py  citations.py  internal_provider.py  models.py  notebooklm_enterprise_provider.py  source_builder.py  store.py
rednotebook/migrations/: __init__.py  auto_namespace.py
rednotebook/notebook/: __init__.py  cells.py  git_store.py  models.py  publish_store.py  publisher.py  runner.py  seed.py  storage.py
rednotebook/profiling/: __init__.py  pii_detector.py  profiler.py  stats.py
rednotebook/security/: __init__.py  masking.py  secrets.py  sql_guard.py
rednotebook/server/: __init__.py  dependencies.py  main.py  query_registry.py  rate_limit.py  schemas.py
rednotebook/server/routers/: admin.py  ai.py  auth.py  charts.py  connections.py  connections_me.py  health.py  infographics.py  knowledge.py  me.py  metadata.py  notebooks.py  oauth.py  public.py  query.py  uploads.py
rednotebook/uploads/: store.py
rednotebook/visualization/: __init__.py  charts.py  export.py  infographic.py  recommender.py  render_browser.py  templates.py
releases/: RELEASE_NOTES_v0.7.15.md  RELEASE_NOTES_v0.7.16.md  RELEASE_NOTES_v0.7.20.md  RELEASE_NOTES_v0.7.25.md  RELEASE_NOTES_v0.7.26.md  RELEASE_NOTES_v0.7.27.md  RELEASE_NOTES_v0.7.28.md  RELEASE_NOTES_v0.7.29.md
tests/: test_ai_context_builder.py  test_auth.py  test_bundled_provider_registration.py  test_connector_base.py  test_duckdb_connector.py  test_knowledge_models.py  test_notebook_models.py  test_pii_detector.py  test_profiler.py  test_sql_guard.py  test_sqlalchemy_sqlite.py  test_trino_connector.py
