[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rednotebook-ai"
version = "0.7.0"
description = "Open-source AI data notebook for Trino and modern data platforms."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "RedAnalytica" }]
keywords = ["trino", "notebook", "ai", "data", "analytics", "visualization"]

dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "trino>=0.327.0",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "plotly>=5.18",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.9",
    "sqlglot>=21.0",
    "rich>=13.7",
    "bcrypt>=4.1",
    "PyJWT>=2.8",
    "email-validator>=2.1",
    "httpx>=0.27",
    "cryptography>=42.0",
    "slowapi>=0.1.9",
    "duckdb>=1.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
ai-openai = ["openai>=1.10"]
ai-anthropic = ["anthropic>=0.18"]
# Database driver extras. Each one installs the Python driver that SQLAlchemy
# needs for that dialect; without it the connector will raise a friendly
# "pip install ..." error at connect time instead of breaking app startup.
postgres = ["psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1"]
mariadb = ["pymysql>=1.1"]
mssql = ["pyodbc>=5.0"]
snowflake = ["snowflake-sqlalchemy>=1.5"]
bigquery = ["sqlalchemy-bigquery>=1.10"]
redshift = ["sqlalchemy-redshift>=0.8", "redshift-connector>=2.0"]
oracle = ["oracledb>=2.0"]
clickhouse = ["clickhouse-sqlalchemy>=0.3"]
databricks = ["databricks-sqlalchemy>=1.0"]
all-connectors = [
    "psycopg[binary]>=3.1",
    "pymysql>=1.1",
    "pyodbc>=5.0",
    "snowflake-sqlalchemy>=1.5",
    "sqlalchemy-bigquery>=1.10",
    "sqlalchemy-redshift>=0.8",
    "redshift-connector>=2.0",
    "oracledb>=2.0",
    "clickhouse-sqlalchemy>=0.3",
    "databricks-sqlalchemy>=1.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
rednotebook = "rednotebook.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rednotebook*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
extend-safe-fixes = ["UP006", "UP007", "UP017", "UP037"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI / Typer sentinels are conventional in argument defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
    "typer.Option",
    "typer.Argument",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
filterwarnings = [
    "ignore:Field name \"schema\".*shadows an attribute in parent.*:UserWarning",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
